correct align

--- a/media/com_templates/css/admin-templates-default.css
+++ b/media/com_templates/css/admin-templates-default.css
@@ -54,5 +54,5 @@
 
 #jform_show_core, #jform_show_diff {
 	display: inline;
-	margin-right: 4em;
+	margin-right: 50px;
 }
